Overflow fixed?

--- a/Style/style_karsten.css
+++ b/Style/style_karsten.css
@@ -411,8 +411,8 @@ html {
 	}
 
 	.lookingForYou img {
-		width: 380px;
-			margin: 40px 50px;
+		width: 70%;
+			margin: 40px 60px;
 
 	;
 	}
